fix list is null